add copyright and licesing

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
+# unpacman - the undo button for pacman
+# Copyright (c) 2025 Marciano Mavungo
+# Licensed under the GPLv3 (see LICENSE file for details)
+
 tests.py
