--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,6 @@
 # Copyright (c) 2025 Marciano Mavungo
 # Licensed under the GPLv3 (see LICENSE file for details)
 
+# ignore:
 tests.py
-
 unpacman.txt
